--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Helmi Satria",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
+    "ejs": "^2.6.1",
+    "express": "^4.16.3",
+    "mongoose": "^5.2.16"
   }
 }
