--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "Helmi Satria",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "hbs": "^4.0.1",
     "mongoose": "^5.2.16"
   }
 }
